# to-pdf

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/commands/: brainstorm.md  execute-plan.md  write-plan.md
.github/workflows/: pages.yml  release.yml
docs/: index.html
docs/superpowers/plans/: 2026-03-25-doctranslate-plan-a.md  2026-03-25-doctranslate-plan-b.md
docs/superpowers/specs/: 2026-03-25-doctranslate-design.md
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: chat.rs  documents.rs  mod.rs  settings.rs  tasks.rs
src-tauri/src/db/: sqlite.rs
src-tauri/src/models/: document.rs  mod.rs  provider.rs  task.rs
src-tauri/src/services/: ai_client.rs  document_processor.rs  embedding.rs  mod.rs  pdf_generator.rs  translator.rs
src-tauri/src/vector/: lancedb_store.rs  mod.rs
src/components/chat/: ChatInput.vue  ChatView.vue  MessageItem.vue  MessageList.vue
src/components/documents/: DocumentList.vue  UploadButton.vue
src/components/layout/: AppLayout.vue
src/components/settings/: ProviderConfig.vue
src/components/tasks/: CreateTaskDialog.vue  TaskItem.vue  TaskList.vue
src/composables/: useApiKeyCheck.ts
src/router/: index.ts
src/stores/: chat.ts  documents.ts  index.ts  settings.ts  tasks.ts
src/types/: index.ts
src/views/: HomeView.vue  SettingsView.vue
